<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

    <name>artslam_wrapper</name>
    <version>0.0.1</version>
    <description>The artslam_wrapper package</description>
    <maintainer email="mirko.usuelli@mail.polimi.it">mirko</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>std_srvs</depend>   
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>pcl_conversions</depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>nmea_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>geodesy</build_depend>
    <build_depend>pcl_ros</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>geodesy</exec_depend>
    <exec_depend>pcl_ros</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
    
</package>
